--- a/plugins/simplified-docbook/build.xml
+++ b/plugins/simplified-docbook/build.xml
@@ -27,6 +27,14 @@
       <property name="plugin.dir" value="../${plugin-name}"/>
     </ant>
   </target>
+  
+  <target name="deploy"
+    description="Deploy the plugin (by default this deploys to Apache Forrest web servers)">
+    <echo>Deploying ${plugin-name} to the web server</echo>
+    <ant antfile="../build.xml" target="deploy">  
+      <property name="plugin.dir" value="../${plugin-name}"/>
+    </ant>
+  </target>
    
   <target name="docs" depends="local-deploy">
     <echo>Building Docs for ${plugin-name}</echo>
