--- a/plugins/text-output/build.xml
+++ b/plugins/text-output/build.xml
@@ -18,12 +18,19 @@
 
   <property name="forrest.root-dir" location="../.."/>   
   <property name="forrest.home" location="../../main" />  
-  <property name="build.dir" location="build"/>
   <property name="plugin-name" value="text-output"/>
 
   <target name="local-deploy">
     <echo>Locally deploying ${plugin-name}</echo>
     <ant antfile="../build.xml" target="local-deploy">  
+      <property name="plugin.dir" value="../${plugin-name}"/>
+    </ant>
+  </target>
+  
+  <target name="deploy"
+    description="Deploy the plugin (by default this deploys to Apache Forrest web servers)">
+    <echo>Deploying ${plugin-name} to the web server</echo>
+    <ant antfile="../build.xml" target="deploy">  
       <property name="plugin.dir" value="../${plugin-name}"/>
     </ant>
   </target>
