pdf-oputput plugin is required by all plugins by default
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@105906 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/pluginTemplate/forrest.properties
+++ b/plugins/pluginTemplate/forrest.properties
@@ -105,4 +105,4 @@
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
-project.required.plugins=@plugin-name@
+project.required.plugins=@plugin-name@,org.apache.forrest.plugin.pdf-output
