--- a/plugins/simplified-docbook/forrest.properties
+++ b/plugins/simplified-docbook/forrest.properties
@@ -105,4 +105,4 @@
 
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
-project.required.plugins=simplified-docbook
+project.required.plugins=simplified-docbook,org.apache.forrest.plugin.pdf-output
