correct path to patch.xml build target
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@106415 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/build.xml
+++ b/main/build.xml
@@ -262,6 +262,9 @@
     <ant antfile="../plugins/org.apache.forrest.plugin.pdf-output/build.xml" target="test">
       <property name="basedir" location="../plugins/org.apache.forrest.plugin.pdf-output"/>
     </ant>
+    <ant antfile="../plugins/org.apache.forrest.plugin.XHTML-output/build.xml" target="test">
+      <property name="basedir" location="../plugins/org.apache.forrest.plugin.XHTML-output"/>
+    </ant>
   </target>
 
   <target name="testseed" depends="init">
@@ -389,7 +392,7 @@
      It makes a messy patch when they have other pending changes.
         description="Create a patch from your working copy, ready for contribution">
 -->
-      <ant antfile="tools/targets/patch.xml" target="patchpackage"/>
+      <ant antfile="../tools/targets/patch.xml" target="patchpackage"/>
     </target>
 
 
