unzip into the correct location
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@106424 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/build.xml
+++ b/plugins/build.xml
@@ -33,7 +33,7 @@
   <property name="deploy.svn.password" value=""/>
   <property name="deploy.svn.url" value="https://svn.apache.org/repos/asf/forrest/site/plugins"/>
   <property name="deploy.svn.commit-message" value="Automatic deployment from plugins build"/>
-  <property name="deploy.svn.svn-dir" location="${forrest.build.dir}/svn-site-deploy"/>
+  <property name="deploy.svn.svn-dir" location="${forrest.build.dir}/svn-plugins-deploy"/>
   <property name="deploy.svn.svn-filestoadd" location="build/svn-deploy.toadd"/>
   
   
