clean plugin directory when testing plugins in order to verify plugins are being correctly installed
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@106425 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/build.xml
+++ b/main/build.xml
@@ -257,14 +257,17 @@
           description="Test that the features are okay before committing."/>
   
   <target name="testPlugins"
+          depends="cleanPlugins"
           description="test each of the plugins">
     <!-- FIXME: need to iterate over all plugins when testing -->
     <ant antfile="../plugins/org.apache.forrest.plugin.pdf-output/build.xml" target="test">
       <property name="basedir" location="../plugins/org.apache.forrest.plugin.pdf-output"/>
     </ant>
-    <ant antfile="../plugins/org.apache.forrest.plugin.XHTML-output/build.xml" target="test">
-      <property name="basedir" location="../plugins/org.apache.forrest.plugin.XHTML-output"/>
-    </ant>
+  </target>
+  
+  <target name="cleanPlugins"
+          description="Remove installed plugins before testing to ensure they are correctly installed when run">
+    <delete dir="../build/plugins"/>
   </target>
 
   <target name="testseed" depends="init">
