--- a/plugins/IMSManifest/forrest.properties
+++ b/plugins/IMSManifest/forrest.properties
@@ -105,4 +105,4 @@
 
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
-project.required.plugins=IMSManifest
+project.required.plugins=IMSManifest,org.apache.forrest.plugin.pdf-output
