--- a/plugins/wiki/forrest.properties
+++ b/plugins/wiki/forrest.properties
@@ -105,4 +105,4 @@
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
-project.required.plugins=wiki
+project.required.plugins=wiki,org.apache.forrest.plugin.pdf-output
