add note in docs about using htmlArea (with link to Sourceforge hosted development site), change name of htmlArea.zip to indicate release in use
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@106712 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/org.apache.forrest.plugin.htmlArea/build.xml
+++ b/plugins/org.apache.forrest.plugin.htmlArea/build.xml
@@ -24,7 +24,7 @@
           description="Extract the htmlArea distribtion">
      <unzip dest="${plugins.localDeploy-dir}/${plugin-name}/resources">
        <fileset dir="tools">
-          <include name="htmlArea.zip"/>
+          <include name="htmlArea_3.0-rc1.zip"/>
         </fileset>
      </unzip>   
   </target>
