--- a/plugins/org.apache.forrest.plugin.OpenOffice.org/forrest.properties
+++ b/plugins/org.apache.forrest.plugin.OpenOffice.org/forrest.properties
@@ -105,4 +105,4 @@
 
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
-project.required.plugins=OpenOffice.org
+project.required.plugins=org.apache.forrest.plugin.OpenOffice.org
