Change references of "text-output" to "org.apache.forrest.plugin.text-output"
Change the instructions to make sure the Forrest version of "ant" is
used by explicitly using $FORREST_HOME/tools/ant/bin/ant.


git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@109692 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/org.apache.forrest.plugin.text-output/build.xml
+++ b/plugins/org.apache.forrest.plugin.text-output/build.xml
@@ -16,7 +16,7 @@
 -->
 <project default="docs" basedir="." name="Forrest plugin build file">
 
-  <property name="plugin-name" value="text-output"/>
+  <property name="plugin-name" value="org.apache.forrest.plugin.text-output"/>
 
   <import file="../build.xml"/>
   
