--- a/plugins/org.apache.forrest.plugin.text-output/forrest.properties
+++ b/plugins/org.apache.forrest.plugin.text-output/forrest.properties
@@ -105,4 +105,4 @@ project.name=Text-Output
 
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
-project.required.plugins=text-output,org.apache.forrest.plugin.pdf-output
+project.required.plugins=org.apache.forrest.plugin.text-output,org.apache.forrest.plugin.pdf-output
