we now have a new name
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@109740 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/org.apache.forrest.plugin.OpenOffice.org/build.xml
+++ b/plugins/org.apache.forrest.plugin.OpenOffice.org/build.xml
@@ -16,7 +16,7 @@
 -->
 <project default="docs" basedir="." name="Forrest plugin build file">
 
-  <property name="plugin-name" value="OpenOffice.org"/>
+  <property name="plugin-name" value="org.apache.forrest.plugin.OpenOffice.org"/>
 
   <import file="../build.xml"/>
   
