--- a/main/build.xml
+++ b/main/build.xml
@@ -293,20 +293,6 @@
     <antcall target="site"/>
     <antcall target="webapp"/>
   </target>
-
-
-  <!-- =================================================================== -->
-  <!-- deploy the required plugins locally                                 -->
-  <!-- =================================================================== -->
-  <target name="requiredPlugins" depends="init">
-    <ant antfile="../plugins/build.xml" 
-      target="local-deploy">
-      <property name="plugin-name" 
-        value="org.apache.forrest.plugin.pdf-output"/>
-      <property name="basedir" 
-        value="../plugins"/>
-    </ant>
-  </target>
   
   <!-- =================================================================== -->
   <!-- Compile Cocoon java classes                                         -->
@@ -326,7 +312,7 @@
   <!-- =================================================================== -->
   <!-- Jar Cocoon classes                                                  -->
   <!-- =================================================================== -->
-  <target name="jar" depends="init, compile, requiredPlugins">
+  <target name="jar" depends="init, compile">
     <jar destfile="${build.dir}/xml-forrest.jar"
       basedir="${build.classes}"/>
     <echo>
