--- a/build.xml
+++ b/build.xml
@@ -34,7 +34,7 @@
 
     <property name="name"                  value="apache-forrest"/>
     <property name="packages"              value="${xgump.module.project.packages}"/>
-    <property name="version"
+    <property name="forrest.version"
       value="${xgump.module.project.version.major}.${xgump.module.project.version.minor}${xgump.module.project.version.tag}"/>
 
     <property name="java.dir"              location="src/java"/>
@@ -65,7 +65,7 @@
       Project Name ${ant.project.name}
       Java Version ${ant.java.version}      
       Timestamp ${DSTAMP}${TSTAMP}
-      This is: ${name} ${version}
+      This is: ${name} ${forrest.version}
 
       --------------------------------------------------------------
     </echo>
@@ -105,11 +105,11 @@
 
   <target name="release-dist" depends="init, dist-clean, dist-shbat" 
     description="Makes release distributions">
-    <property name="release-name-bin" value="${name}-${version}"/>
+    <property name="release-name-bin" value="${name}-${forrest.version}"/>
     <zip
       file="${dist.dir}/${release-name-bin}.zip" >
       <zipfileset dir="${dist-shbat.dir}" prefix="${release-name-bin}"/>
-      <zipfileset dir="etc"  prefix="${release-name-bin}" includes="RELEASE-NOTES-${version}.txt"/>
+      <zipfileset dir="etc"  prefix="${release-name-bin}" includes="RELEASE-NOTES-${forrest.version}.txt"/>
     </zip>
     <tar longfile="gnu" compression="gzip"
       destfile="${dist.dir}/${release-name-bin}.tar.gz" >
@@ -126,7 +126,7 @@
         <include name="**/ant"/>
         <include name="**/forrest"/>
       </tarfileset>
-      <tarfileset prefix="${release-name-bin}" dir="etc" includes="RELEASE-NOTES-${version}.txt"/>
+      <tarfileset prefix="${release-name-bin}" dir="etc" includes="RELEASE-NOTES-${forrest.version}.txt"/>
     </tar>
   </target>
 
