Upgrade the version of Cocoon that Forrest uses to a new revision, cocoon 2.2.0-dev revision 111170 (cocoon trunk).
Major Changes:

  * Developement jars from cocooon are suffixed with 2.2.0-dev-rNNNNN
    where NNNN is the subversion revision from whence it came.
  * EHCache (ehcache.sourceforge.net) is now being used instead of JCS
  * by Cocoon and hence, now by Forrest as well.
  * Cocoon now uses the avalon.framework.service.* interface instead of
    the avalon.framework.component.* interfaces.  The Forrest Java
    classes have been updated to reflect that move.

Known Issues:

  * A "forrest site" generates tons of "DEBUG" information from EHCache.
    That should be correctible via some configuration change, but has
    not been done here.
  * The LocationMap.java class has not been updated to use the
    avalon.framework.service.* interface.



git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@111200 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/cocoon_upgrade/build.properties
+++ b/etc/cocoon_upgrade/build.properties
@@ -23,20 +23,20 @@
 
 # ---- Webapp ------------------------------------------------------------------
 
-exclude.webapp.documentation=true
-exclude.webapp.javadocs=true
+#exclude.webapp.documentation=true
+#exclude.webapp.javadocs=true
 #exclude.webapp.samples=true
-exclude.webapp.test-suite=true
+#exclude.webapp.test-suite=true
 
 # ---- Build Exclusions --------------------------------------------------------
 
 #exclude.deprecated=true
-exclude.documentation=true
-exclude.javadocs=true
+#exclude.documentation=true
+#exclude.javadocs=true
 # Include Java source code into the binary jar files
-include.sources-in-jars=false
+#include.sources-in-jars=true
 # Include Java source code into separate, source only jar files
-include.sources-jars=false
+#include.sources-jars=true
 
 # ---- Configuration -----------------------------------------------------------
 
