--- a/etc/cocoon_upgrade/blocks.properties
+++ b/etc/cocoon_upgrade/blocks.properties
@@ -46,49 +46,49 @@
 
 #-----[dependency]: "authentication-fw" depends on "session-fw".
 #-----[dependency]: "authentication-fw" is needed by "portal", "portal-fw".
-include.block.authentication-fw=false
+#include.block.authentication-fw=false
 #-----[dependency]: "batik" is needed by "fop", "scratchpad", "tour".
-include.block.batik=true
-include.block.bsf=false
+#include.block.batik=false
+#include.block.bsf=false
 #-----[dependency]: "chaperon" depends on "xsp" (for samples).
-include.block.chaperon=true
+#include.block.chaperon=false
 #-----[dependency]: "databases" depends on "xsp".
 #-----[dependency]: "databases" is needed by "hsqldb", "jms", "ojb", "petstore", "repository", "xmldb".
-include.block.databases=false
+#include.block.databases=false
 #-----[dependency]: "fop" depends on "batik".
 #-----[dependency]: "fop" is needed by "tour".
-include.block.fop=true
+#include.block.fop=false
 #-----[dependency]: "hsqldb" depends on "databases".
 #-----[dependency]: "hsqldb" is needed by "jms", "ojb", "petstore".
-include.block.hsqldb=false
+#include.block.hsqldb=false
 #-----[dependency]: "html" is needed by "portal".
-include.block.html=true
-include.block.itext=false
-include.block.jfor=false
-include.block.jsp=false
-include.block.linkrewriter=true
+#include.block.html=false
+#include.block.itext=false
+#include.block.jfor=false
+#include.block.jsp=false
+#include.block.linkrewriter=false
 #-----[dependency]: "lucene" depends on "forms" (for samples), "xsp" (for samples).
 #-----[dependency]: "lucene" is needed by "querybean".
-include.block.lucene=true
-include.block.naming=false
-include.block.paranoid=false
-include.block.poi=false
+#include.block.lucene=false
+#include.block.naming=false
+#include.block.paranoid=false
+#include.block.poi=false
 #-----[dependency]: "portal" depends on "authentication-fw", "html", "session-fw".
 #-----[dependency]: "portal" is needed by "faces".
-include.block.portal=false
-include.block.profiler=true
+#include.block.portal=false
+#include.block.profiler=false
 #-----[dependency]: "python" depends on "xsp".
-include.block.python=false
+#include.block.python=false
 #-----[dependency]: "session-fw" depends on "xsp".
 #-----[dependency]: "session-fw" is needed by "authentication-fw", "portal", "portal-fw".
-include.block.session-fw=false
+#include.block.session-fw=false
 #-----[dependency]: "velocity" is needed by "petstore", "scratchpad".
-include.block.velocity=false
-include.block.web3=false
+#include.block.velocity=false
+#include.block.web3=false
 #-----[dependency]: "xmldb" depends on "databases".
-include.block.xmldb=false
+#include.block.xmldb=false
 #-----[dependency]: "xsp" is needed by "chaperon", "databases", "eventcache", "forms", "lucene", "python", "scratchpad", "session-fw", "woody".
-include.block.xsp=true
+#include.block.xsp=false
 
 # Unstable blocks --------------------------------------------------------------
 
@@ -101,61 +101,61 @@ include.block.xsp=true
 # stable.
 
 #-----[dependency]: "apples" depends on "forms" (for samples).
-include.block.apples=false
+#include.block.apples=false
 #-----[dependency]: "asciiart" is needed by "mail".
-include.block.asciiart=true
+#include.block.asciiart=false
 #-----[dependency]: "axis" is needed by "scratchpad".
-include.block.axis=false
+#include.block.axis=false
 #-----[dependency]: "cron" is needed by "scratchpad".
-include.block.cron=false
-include.block.deli=false
+#include.block.cron=false
+#include.block.deli=false
 #-----[dependency]: "eventcache" depends on "jms", "xsp" (for samples).
 #-----[dependency]: "eventcache" is needed by "repository".
-include.block.eventcache=false
+#include.block.eventcache=false
 #-----[dependency]: "faces" depends on "portal", "taglib".
 #-----[dependency]: "faces" is needed by "scratchpad".
-include.block.faces=false
+#include.block.faces=false
 #-----[dependency]: "forms" depends on "xsp" (for samples).
 #-----[dependency]: "forms" is needed by "apples", "javaflow", "lucene", "ojb", "petstore", "querybean", "tour".
-include.block.forms=false
+#include.block.forms=false
 #-----[dependency]: "javaflow" depends on "forms", "ojb" (for samples).
 #-----[dependency]: "javaflow" is needed by "scratchpad".
-include.block.javaflow=false
+#include.block.javaflow=false
 #-----[dependency]: "jms" depends on "databases" (for samples), "hsqldb" (for samples).
 #-----[dependency]: "jms" is needed by "eventcache", "slide".
-include.block.jms=false
-include.block.linotype=false
+#include.block.jms=false
+#include.block.linotype=false
 #-----[dependency]: "mail" depends on "asciiart", "scratchpad".
-include.block.mail=false
-include.block.midi=false
+#include.block.mail=false
+#include.block.midi=false
 #-----[dependency]: "ojb" depends on "databases" (for samples), "forms" (for samples), "hsqldb" (for samples).
 #-----[dependency]: "ojb" is needed by "javaflow".
-include.block.ojb=false
+#include.block.ojb=false
 #-----[dependency]: "petstore" depends on "databases", "forms", "hsqldb", "velocity".
-include.block.petstore=false
-include.block.proxy=false
-include.block.qdox=false
+#include.block.petstore=false
+#include.block.proxy=false
+#include.block.qdox=false
 #-----[dependency]: "querybean" depends on "forms" (for samples), "lucene".
-include.block.querybean=false
+#include.block.querybean=false
 #-----[dependency]: "repository" depends on "databases" (for samples), "eventcache".
 #-----[dependency]: "repository" is needed by "scratchpad", "slide", "webdav".
-include.block.repository=false
+#include.block.repository=false
 #-----[dependency]: "scratchpad" depends on "axis" (for samples), "batik" (for samples), "cron", "faces" (for samples), "javaflow", "repository", "velocity" (for samples), "xsp".
 #-----[dependency]: "scratchpad" is needed by "mail".
-include.block.scratchpad=false
-include.block.serializers=false
+#include.block.scratchpad=false
+#include.block.serializers=false
 #-----[dependency]: "slide" depends on "jms", "repository".
-include.block.slide=false
+#include.block.slide=false
 #-----[dependency]: "slop" is needed by "tour".
-include.block.slop=false
-include.block.stx=false
+#include.block.slop=false
+#include.block.stx=false
 #-----[dependency]: "taglib" is needed by "faces".
-include.block.taglib=false
-include.block.template=false
+#include.block.taglib=false
+#include.block.template=false
 #-----[dependency]: "tour" depends on "batik", "fop", "forms", "slop".
-include.block.tour=false
+#include.block.tour=false
 #-----[dependency]: "webdav" depends on "repository".
-include.block.webdav=false
+#include.block.webdav=false
 
 # Deprecated blocks ------------------------------------------------------------
 
