--- a/main/build.xml
+++ b/main/build.xml
@@ -271,15 +271,16 @@
   </target>
 
   <target name="testseed" depends="init">
-    <property name="forrest.home" location="." />  
+    <property name="forrest.home" location=".." />
+    <property name="forrest.core" location="${forrest.home}/main" />    
     <property name="test.dir" value="${build.dir}/test"/>
     <delete dir="${test.dir}"/>
     <mkdir dir="${test.dir}"/>
-    <ant antfile="${forrest.home}/forrest.build.xml" target="seed">
+    <ant antfile="${forrest.core}/forrest.build.xml" target="seed">
       <property name="forrest.home" value="${forrest.home}"/>  
       <property name="project.home" value="${test.dir}"/>
     </ant>
-    <ant antfile="${forrest.home}/forrest.build.xml" target="site">
+    <ant antfile="${forrest.core}/forrest.build.xml" target="site">
       <property name="forrest.home" value="${forrest.home}"/>  
       <property name="project.home" value="${test.dir}"/>
     </ant>
