cocoon-deprecated.jar is not needed.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@111342 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/cocoon_upgrade/local.build.properties
+++ b/etc/cocoon_upgrade/local.build.properties
@@ -30,7 +30,7 @@ exclude.webapp.test-suite=true
 
 # ---- Build Exclusions --------------------------------------------------------
 
-#exclude.deprecated=true
+exclude.deprecated=true
 exclude.documentation=true
 exclude.javadocs=true
 # Include Java source code into the binary jar files
