preparing for rename to conform to naming standards
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@111376 13f79535-47bb-0310-9956-ffa450edef68

--- a/plugins/feeder/build.xml
+++ b/plugins/feeder/build.xml
@@ -16,7 +16,7 @@
 -->
 <project default="docs" basedir="." name="Forrest plugin build file">
 
-  <property name="plugin-name" value="feeder"/>
+  <property name="plugin-name" value="org.apache.forrest.plugin.feeder"/>
 
   <import file="../build.xml"/>
   
