--- a/plugins/feeder/forrest.properties
+++ b/plugins/feeder/forrest.properties
@@ -104,4 +104,4 @@
 #project.i18n=true
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
-project.required.plugins=feeder,org.apache.forrest.plugin.pdf-output
+project.required.plugins=org.apache.forrest.plugin.feeder,org.apache.forrest.plugin.pdf-output
