update for log4j logging stuff
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@111684 13f79535-47bb-0310-9956-ffa450edef68

--- a/tools/eclipse/build.properties
+++ b/tools/eclipse/build.properties
@@ -17,7 +17,9 @@ output.forrestplugin.jar = bin/
 bin.includes = plugin.xml,\
                forrestplugin.jar,\
                icons/,\
-               readme.txt
+               readme.txt,\
+               lib/,\
+               conf/
 src.includes = src/,\
                readme.txt,\
                plugin.xml,\
