--- a/main/fresh-site/forrest.properties
+++ b/main/fresh-site/forrest.properties
@@ -105,4 +105,4 @@
 # The names of plugins that are required to build the project
 # comma separated list (no spaces)
 # Run "forrest available-plugins" for a list of plug-ins currently available
-project.required.plugins=org.apache.forrest.plugin.pdf-output,org.apache.forrest.plugin.pod-output,org.apache.forrest.plugin.text-output
+project.required.plugins=org.apache.forrest.plugin.pdf-output
