site => fresh-site ... it was validating zero skinconf.xml files after svn restructure.
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@122839 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/build.xml
+++ b/main/build.xml
@@ -166,7 +166,7 @@
             location="./webapp/resources/schema/catalog.xcat"/>
         </catalogpath>
       </xmlcatalog>
-      <fileset dir="./site"
+      <fileset dir="./fresh-site"
         includes="**/skinconf.xml" />
     </xmlvalidate>
     <!-- All stylesheets **/*.xsl -->
