add example forrest.plugins.descriptors property
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@124611 13f79535-47bb-0310-9956-ffa450edef68

--- a/main/fresh-site/forrest.properties
+++ b/main/fresh-site/forrest.properties
@@ -29,6 +29,7 @@
 
 # comma separated list, file:// is supported
 #forrest.skins.descriptors=http://forrest.apache.org/skins/skins.xml,file:///c:/myskins/skins.xml
+#forrest.plugins.descriptors=http://forrest.apache.org/plugins/plugins.xml
 
 ##############
 # behavioural properties
