upgrade to Cocoon R125082
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@125178 13f79535-47bb-0310-9956-ffa450edef68

--- a/etc/cocoon_upgrade/build.xml
+++ b/etc/cocoon_upgrade/build.xml
@@ -23,12 +23,12 @@
   <!-- ===============================================================
        Set properties
        =============================================================== -->
-       <property name="cocoon.home"              location="../../../../cocoon-2.1"/>
+       <property name="cocoon.home"              location="../../../cocoon"/>
        <property name="forrest.home"             location="../../"/>
   </target>
 
   <target name="import-cocoon-xconf" depends="init">
-     <xslt force="true" in="${cocoon.home}/src/webapp/WEB-INF/cocoon.xconf" out="${forrest.home}/main/webapp/WEB-INF/cocoon.xconf" style="./upgrade-cocoon-xconf.xsl" >
+     <xslt force="true" in="${cocoon.home}/src/webapp/WEB-INF/xconf/cocoon-core.xconf" out="${forrest.home}/main/webapp/WEB-INF/xconf/forrest-core.xconf" style="./upgrade-cocoon-xconf.xsl" >
        <outputproperty name="indent" value="yes"/>
     </xslt>
   </target>
