refactor server start technique, now able to shutdown server from GUI
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@125499 13f79535-47bb-0310-9956-ffa450edef68

--- a/tools/eclipse/build.properties
+++ b/tools/eclipse/build.properties
@@ -26,4 +26,5 @@ src.includes = src/,\
                plugin.properties,\
                build.properties,\
                icons/,\
-               .project
+               .project,\
+               lib/
