--- a/tools/eclipse/plugin.xml
+++ b/tools/eclipse/plugin.xml
@@ -29,18 +29,26 @@
       <library name="lib/log4j-1.2.9.jar">
          <export name="*"/>
       </library>
+      <library name="lib/jetty-4.2.19.jar">
+         <export name="*"/>
+      </library>
+      <library name="lib/servlet-2.3.jar">
+         <export name="*"/>
+      </library>
    </runtime>
    <requires>
       <import plugin="org.apache.ant"/>
+      <import plugin="org.eclipse.ant.core"/>
       <import plugin="org.eclipse.ui"/>
       <import plugin="org.eclipse.jdt.core"/>
       <import plugin="org.eclipse.jdt.launching"/>
       <import plugin="org.eclipse.jface.text"/>
       <import plugin="org.eclipse.core.resources"/>
       <import plugin="org.eclipse.core.runtime"/>
-      <import plugin="org.eclipse.ant.core"/>
+      <import plugin="org.eclipse.debug.core"/>
       <import plugin="org.eclipse.ui.ide"/>
       <import plugin="org.eclipse.webbrowser"/>
+      <import plugin="org.eclipse.debug.ui"/>
    </requires>
 
 
@@ -112,12 +120,4 @@
       extensions="html,htm,gif,jpg,jpeg,xhtml"
       contributorClass="org.eclipse.webbrowser.internal.WebBrowserEditorActionBarContributor"/>
   </extension>
-  <extension
-        point="org.eclipse.ant.core.extraClasspathEntries">
-     <extraClasspathEntry
-           headless="true"
-           library="build/org/apache/forrest/ForrestListener.class"/>
-  </extension>
-   
-
 </plugin>
